[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firebase_cart"
version = "0.1.1"
authors = [
  { name="Adeniyi Aderounm", email="teebarg01@gmail.com" },
]
description = "A Firebase-based cart package for Python applications"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "firebase-admin==6.4.0",
    "pydantic==2.8.2"
]

[project.urls]
"Homepage" = "https://github.com/teebarg/firebase_cart"
"Bug Tracker" = "https://github.com/teebarg/firebase_cart/issues"